# Tagged_Union

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Build.yml  cmake.yml
profiling_results/: 16_types.txt  32_types.txt  5_types.txt  64_types.txt
profiling_results/big_functions/: 128_types.txt  16_types.txt  32_types.txt  5_types.txt
profiling_results/faster_functions/: 128_types.txt  16_types.txt  32_types.txt  5_types.txt  64_types.txt
src/: Choose_Integer_Type_From_Size.h  Foo_Bar_Baz.h  Get_Type_From_Index.h  Helper_Jump_Table.h  Jump_Table_Array.h  My_Union.h  Parameter_Pack_For_Each.h  Probably_UB_Array.h  Profiling.cpp  Recursive_Union.h  Returns_Void.h  Tagged_Union.sln  main.cpp  test_function_wrapper.h
src/Debugging/: Type_Info_Err.h
src/Examples/: Foo_Bar_Baz.h  Free_Functions.h  Virtual_Inheritance_Classes.h  Visitors.h
src/Misc_Utils/: Progress_Bar.h  Sized_Struct.h  Stack_Buffer.h
src/Tagged_Union/: Tagged_Union.cpp  Tagged_Union.h
src/Tagged_Union/Dependencies/: Bad_Tagged_Union_Access.cpp  Bad_Tagged_Union_Access.h  Jump_Table_Array.h  My_Union.h
src/Template_Utils/: All_Types_Have_Attribute.h  Choose_Integer_Type_From_Size.h  Constexpr_Ternary.h  Get_Type_From_Index.h  Get_Type_Location_In_Pack.h  Member_Functions_Have_Same_Signature.h  Pack_Contains_Type.h
src/Virtual_Inheritance/: virtual_inheritance_classes.h
src/profiling/: profiling1024.cpp  profiling128.cpp  profiling16.cpp  profiling32.cpp  profiling5.cpp  profiling512.cpp  profiling64.cpp  structs.h  visitors.h
src/profiling/faster_functions/: profiling1024.cpp  profiling128.cpp  profiling32.cpp  profiling5.cpp  profiling512.cpp  structs.h
src/profiling/pathological_case/: profiling1024.cpp  profiling128.cpp  profiling16.cpp  profiling32.cpp  profiling5.cpp  profiling512.cpp  profiling64.cpp  profiling_funcs.h  structs.h  visitors.h
test/test-Tagged_Union/: test-Tagged_Union.cpp
